# thor

./: .clang-format  .editorconfig  .gitignore  ast.md  lang.md  lexer.hpp  meson.build  sample.th  thor.cpp  utils.cpp  utils.hpp
src/: analyse.c  analyse.h  ast.h  ast_walker.c  ast_walker.h  code_analyse.c  code_analyse.h  common.c  common.h  da.h  language.h  lexer.c  lexer.h  meson.build  parser.c  parser.h  thor.c  token.c  token.h  uthash.h
src/llvm/: codegen.c  codegen.h
tests/: lexer_test.c  meson.build  parser_test.c
